add distance to db

--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -42,8 +42,13 @@
             <details>
               <summary>Может быть приготовлен ресторанами:</summary>
               <ul>
-                {% for restaurant in order.available_restaurants %}
-                  <li>{{ restaurant }}
+                {% for restaurant, distance in order.available_restaurants %}
+                  <li>
+                    {{ restaurant.name }}
+                    {% if distance is not None %}
+                      ({{ distance }} км)
+                    {% endif %}
+                  </li>
                 {% endfor %}
               </ul>
             </details>
